Types for the public Category, Langauges, and Healthcheck handlers implemeted and swagger done
