# docs/swagger.yaml
@@ -55,14 +55,18 @@ definitions:
           $ref: '#/definitions/types.TranslationResponse'
         type: array
     type: object
-  types.Envelope:
-    additionalProperties: true
-    type: object
   types.ErrorResponse:
     properties:
       code:
         type: integer
       error:
+        type: string
+    type: object
+  types.HealthcheckResponse:
+    properties:
+      environment:
+        type: string
+      status:
         type: string
     type: object
   types.PaginatedResponse-responses_CategoryPublicResponse:
@@ -72,6 +76,15 @@ definitions:
       results:
         items:
           $ref: '#/definitions/types.DetailResponse-responses_CategoryPublicResponse'
+        type: array
+    type: object
+  types.PaginatedResponse-responses_LanguagePublicResponse:
+    properties:
+      metadata:
+        $ref: '#/definitions/types.PaginationMetadata'
+      results:
+        items:
+          $ref: '#/definitions/types.DetailResponse-responses_LanguagePublicResponse'
         type: array
     type: object
   types.PaginationMetadata:
@@ -262,7 +275,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/types.Envelope'
+            $ref: '#/definitions/types.HealthcheckResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -294,16 +307,7 @@ paths:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/types.Envelope'
-            - properties:
-                metadata:
-                  $ref: '#/definitions/types.PaginationMetadata'
-                results:
-                  items:
-                    $ref: '#/definitions/responses.LanguagePublicResponse'
-                  type: array
-              type: object
+            $ref: '#/definitions/types.PaginatedResponse-responses_LanguagePublicResponse'
         "404":
           description: Not Found
           schema:
@@ -327,7 +331,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: translations are empty for this endpoint
+          description: OK
           schema:
             $ref: '#/definitions/types.DetailResponse-responses_LanguagePublicResponse'
         "400":
